--- a/order/index.html
+++ b/order/index.html
@@ -104,10 +104,10 @@ include_once "../include/header.html";
                         <div class="cash">
                             <ul>
                                 <li>
-                                    <a href="#none"><img src="../images/order/cash01.svg" alt=""></a>
+                                    <a href="javascript:alert('Coming soon')"><img src="../images/order/cash01.svg" alt=""></a>
                                 </li>
                                 <li>
-                                    <a href="#none"><img src="../images/order/cash02.svg" alt=""></a>
+                                    <a href="javascript:alert('Coming soon')"><img src="../images/order/cash02.svg" alt=""></a>
                                 </li>
                             </ul>
                             <strong>₩39,000</strong>
