완성본 스타일 수정

--- a/index.html
+++ b/index.html
@@ -1,9 +1,35 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TITLE</title>
+    <title>K-PPLE</title>
+    <link rel="stylesheet" href="../css/style.css">
+    <!-- <link rel="stylesheet" href="../css/aos.css"> -->
+
+
+    <link rel="canonical" href="K-PPLE">
+    <link rel="icon" href="./images/common/favicon.ico" type="image/x-icon"> <!-- favicon -->
+
+    <meta name="keywords" content="K-PPLE">
+    <meta name="description" content="K-PPLE">
+    <meta name="author" content="urlLink">
+
+    <meta property="og:type" content="website">
+    <meta property="og:description" content="K-PPLE">
+    <meta property="og:locale" content="ko_KR">
+    <meta property="og:url" content="urlLink">
+    <meta property="og:image" content="./images/common/og.png"> <!-- og -->
+    <meta property="og:title" content="K-PPLE">
+
+
+    <meta name="twitter:card" content="photo">
+    <meta name="twitter:title" content="K-PPLE">
+    <meta name="twitter:description" content="">
+    <meta name="twitter:url" content="urlLink">
+    <meta name="twitter:image" content="./images/common/og.png"> <!-- og -->
+
 </head>
 <body>
     
