--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <meta name="twitter:card" content="photo">
     <meta name="twitter:title" content="K-PPLE">
-    <meta name="twitter:description" content="">
+    <meta name="twitter:description" content="K-PPLE">
     <meta name="twitter:url" content="urlLink">
     <meta name="twitter:image" content="./images/common/og.png"> <!-- og -->
 
